# grokprint

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
.grok/skills/preflight-audit/: SKILL.md
.grok/skills/preflight-audit/references/: audit-rubric.md
docs/: FEATURE-REQUEST-sticky-strip.md  SCENARIOS.md  TASKS-PUBLIC-ALPHA.md  schema.md
docs/audits/: preflight-2026-07-10.md
hooks/: grokprint-stop.json  notify_print.sh  stop_print.py
schema/: grokprint.schema.json
skills/grokprint/: SKILL.md
src/grokprint/: __init__.py  __main__.py  cli.py  extract.py  hook.py  loop.py  redaction.py  render.py  session.py
tests/: test_doctor_probe.py  test_extract.py  test_harness_latency.py  test_loop.py  test_need.py  test_redaction.py
tests/fixtures/cancelled_turn/: events.jsonl
tests/fixtures/minimal_turn/: chat_history.jsonl  events.jsonl  expected.json  summary.json  updates.jsonl
tests/fixtures/secrets_turn/: chat_history.jsonl  events.jsonl
